# choreo

./: .gitignore  .tbdflow.yml  Cargo.toml  Gemfile  README.md  _config.yaml  better_report.json  betterr_report.json  cucumber_report.json  index.html  index.md  report.json  report2.json  test.chor  test_reportschoreo_test_report_20250927_171915.json
_includes/: footer.html  giscus.html  head.html  scripts.html  sidebar.html
_layouts/: default.html
_plugins/: choreo_lexer.rb
assets/css/: style.css  (+1 more)
choreo-lsp/: Cargo.toml  README.md
choreo-lsp/src/: main.rs
docs/: REFERENCE.md  advanced-topics.md  architecture-overview.md  backend-filesystem.md  backend-terminal.md  backend-web.md  choreo-reference.md  core-concepts.md  examples-filesystem.md  examples-system.md  examples-terminal.md  examples-web.md  filesystem-examples.md  grammar-and-parser.md  imports.md  intro.md  keywords-syntax.md  parser.md  senior-engineer-review-v1.md  senior-engineer-review-v2.md  spe-scenarios.md  tasks-and-drivers.md  terminal-examples.md  terminal_backend.md  web-examples.md
examples/: CLI_auth_array_.chor  advanced_matchers.chor  api_health_check.chor  async_example.chor  auth-cli  checking_date.chor  checking_userid.chor  config_file.chor  echo_testing.chor  extracting_fields.chor  fs_operations.chor  git_operations.chor  health_check.chor  import_demo.chor  log_rotation.chor  medi-export1.json  medi-export2.json  medi-export3.json  medi_env_workflow.chor  medi_export_fs_ops.chor  medi_workflow.chor  new_terminal_conditions.chor  process_timout.chor  redirecting_output_tee.chor  set_cwd_and_negative_assertions.chor  setting_demo.chor  simulate_mocking.chor  sorting_lines.chor  system_actions.chor  system_conditions.chor  tar_verification.chor  task_example.chor  tee_output.txt  test.chor  test_ls.chor  test_medi_env_workflow.chor  test_medi_workflow.chor  test_system_interactions.chor  translating_char.chor  variable_substitution.chor  (+9 more)
reports/: better_report_20250909_144343.json  choreo_test_report_20250909_144421.json  choreo_test_report_20250909_145352.json  choreo_test_report_20250909_152157.json  choreo_test_report_20250909_152258.json  choreo_test_report_20250909_152341.json  choreo_test_report_20250909_153018.json  choreo_test_report_20250909_154253.json  choreo_test_report_20250909_154428.json  choreo_test_report_20250909_154520.json  choreo_test_report_20250909_154614.json  choreo_test_report_20250909_154702.json  choreo_test_report_20250909_234947.json  choreo_test_report_20250909_235145.json  choreo_test_report_20250909_235213.json  choreo_test_report_20250909_235406.json  choreo_test_report_20250909_235440.json  choreo_test_report_20250910_110043.json  choreo_test_report_20250910_111206.json  choreo_test_report_20250910_111601.json  choreo_test_report_20250910_134529.json  choreo_test_report_20250910_134613.json  choreo_test_report_20250910_134617.json  choreo_test_report_20250910_135147.json  choreo_test_report_20250910_140012.json  choreo_test_report_20250910_140124.json  choreo_test_report_20250910_141157.json  choreo_test_report_20250910_195250.json  choreo_test_report_20250910_200150.json  choreo_test_report_20250910_200706.json  choreo_test_report_20250910_201316.json  choreo_test_report_20250910_201416.json  choreo_test_report_20250910_201423.json  choreo_test_report_20250910_201550.json  choreo_test_report_20250910_201554.json  choreo_test_report_20250910_202322.json  choreo_test_report_20250910_202946.json  choreo_test_report_20250910_203613.json  choreo_test_report_20250910_203754.json  choreo_test_report_20250910_212222.json  (+149 more)
scripts/: parse_test_report.py
src/: ast.rs  choreo.pest  cli.rs  error.rs  kladd.rs  lib.rs  main.rs  old_main.rs  parser.rs  reporting.rs  runner.rs  terminal_backend.rs
test_results/: choreo-test.md  choreo_test_report_20250911_105550.json  choreo_test_report_20250911_110434.json  choreo_test_report_20250911_111731.json  (+68 more)
(+23 files in other folders)
