[package]
name = "choreo"
version = "0.3.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
repository = "https://github.com/cladam/choreo"
readme = "README.md"
license = "MIT"
description = "DSL for BDD type testing."
keywords = ["dsl", "bdd", "testing", "cli"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
pest = "2.8.2"
pest_derive = "2.8.2"
strip-ansi-escapes = "0.2.1"
terminal_size = "0.4.3"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
thiserror = "2.0.16"
anyhow = "1.0.99"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
chrono = { version = "0.4.42", features = ["serde"] }
portable-pty = "0.9.0"
regex = "1.11.2"
itertools = "0.14.0"

[lib]
name = "choreo"
path = "src/lib.rs"