[package]
name = "choreo"
version = "0.7.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
homepage = "https://cladam.github.io/choreo/"
repository = "https://github.com/cladam/choreo"
readme = "README.md"
license = "MIT"
description = "DSL for BDD type testing."
keywords = ["dsl", "bdd", "testing", "cli"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
pest = "2.8.2"
pest_derive = "2.8.2"
strip-ansi-escapes = "0.2.1"
terminal_size = "0.4.3"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"
jsonpath_lib2 = "0.3.3"
ureq = { version = "3.1.2", features = ["json", "charset"] }
chrono = { version = "0.4.42", features = ["serde"] }
portable-pty = "0.9.0"
regex = "1.11.2"
itertools = "0.14.0"
self_update = "0.42.0"
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[lib]
name = "choreo"
path = "src/lib.rs"