[package]
name = "choreo"
version = "0.14.1"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
homepage = "https://cladam.github.io/choreo/"
repository = "https://github.com/cladam/choreo"
readme = "README.md"
license = "MIT"
description = "DSL for BDD type testing."
keywords = ["dsl", "bdd", "testing", "cli"]
categories = ["command-line-utilities", "development-tools"]
edition = "2024"

[dependencies]
pest = "2.8.6"
pest_derive = "2.8.6"
strip-ansi-escapes = "0.2.1"
terminal_size = "0.4.4"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
uuid = { version = "1.23.1", features = ["v4"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonpath_lib2 = "0.3.3"
ureq = { version = "3.3.0", features = ["json", "charset"] }
chrono = { version = "0.4.44", features = ["serde"] }
portable-pty = "0.9.0"
rayon = "1.12.0"
regex = "1.12.3"
self_update = "0.44.0"
sysinfo = "0.38.4"
which = "8.0.2"
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[lib]
name = "choreo"
path = "src/lib.rs"

[workspace]
members = ["choreo-lsp"]