[package]
name = "choreo-lsp"
version = "0.1.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
homepage = "https://cladam.github.io/choreo/"
repository = "https://github.com/cladam/choreo"
readme = "README.md"
license = "MIT"
description = "LSP for chor, the choreo DSL"
keywords = ["dsl", "bdd", "testing", "cli"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
choreo = { path = ".." }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing-subscriber = "0.3.20"

